--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+configparser==3.5.0
+enum34==1.1.6
+flake8==3.0.4
 gevent==1.1.2
 greenlet==0.4.10
+mccabe==0.5.2
+pycodestyle==2.0.0
+pyflakes==1.2.3
 requests==2.11.1
 six==1.10.0
 slackclient==1.0.2
